Bugfix - SW-846: rows per page select overlaps
* Updated min/max width to 100%, as default min width set by govuk can overflow - this always takes precedence over max-width.

--- a/src/public/scss/_wg.scss
+++ b/src/public/scss/_wg.scss
@@ -187,6 +187,11 @@
     color: colours.$black;
     background: colours.$white;
     font-size: 16px;
+
+    &#page_size {
+      min-width: 100%;
+      max-width: 100%;
+    }
   }
 
   .govuk-task-list,
